--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,4 @@ DISCORD_USER=your_discord_email@example.com
 DISCORD_PASS=your_discord_password
 BAHAMUT_USER=your_bahamut_user
 BAHAMUT_PASS=your_bahamut_pass
+GEMINI_API_KEY=your_gemini_api_key_here
